src/objects/Transactions_in_disputes__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_transaction__c</fullName>
        <label>Date of transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispute_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispute Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transactions in dispute</relationshipLabel>
        <relationshipName>Transactions_in_dispute</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_reference_location__c</fullName>
        <label>Transaction reference/location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_card_transaction__c</fullName>
        <inlineHelpText>To be completed for all card disputes.</inlineHelpText>
        <label>Type of card transaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction in dispute</label>
    <nameField>
        <displayFormat>TD{0000}</displayFormat>
        <label>Transactions in disputes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions in dispute</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>